lesson 11 框架之多线程绘制 1. 增加线程类 2. 窗口类继承线程类，窗口可以开启一个线程，与主线程（UI线程）隔开，UI线程做人机交互，新开的线程做绘制 3. 主线程开启线程的缺点是无法获取线程的信息，开始就开始，结束就结束了。

--- a/src/VirtualEarth/VirtualEarth.vcxproj
+++ b/src/VirtualEarth/VirtualEarth.vcxproj
@@ -169,8 +169,10 @@
     <ClInclude Include="CELLFrame.hpp" />
     <ClInclude Include="CELLGLContext.hpp" />
     <ClInclude Include="CELLInput.hpp" />
+    <ClInclude Include="CELLObject.hpp" />
     <ClInclude Include="CELLOpenGL.h" />
     <ClInclude Include="CELLPlatform.hpp" />
+    <ClInclude Include="CELLThread.hpp" />
     <ClInclude Include="CELLWinApp.hpp" />
     <ClInclude Include="CELLFrameBigMap.h" />
     <ClInclude Include="resource.h" />
