--- a/src/VirtualEarth/VirtualEarth.vcxproj
+++ b/src/VirtualEarth/VirtualEarth.vcxproj
@@ -165,6 +165,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CELLApp.hpp" />
+    <ClInclude Include="CELLCamera.hpp" />
     <ClInclude Include="CELLContext.hpp" />
     <ClInclude Include="CELLEvent.hpp" />
     <ClInclude Include="CELLFrame.hpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="CELLProgramLibary.h" />
     <ClInclude Include="CELLResourceMgr.hpp" />
     <ClInclude Include="CELLThread.hpp" />
+    <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="CELLWinApp.hpp" />
     <ClInclude Include="CELLFrameBigMap.h" />
     <ClInclude Include="resource.h" />
